8주차 노트 내용 추가.

--- a/Notes/Week8_230202.md
+++ b/Notes/Week8_230202.md
@@ -263,3 +263,111 @@ func gameOver(win: Bool) {
     remove(node: ball)
 
 		// To let the sound play before the transition happens, 
+		// we need a slight delay in transitioning to the GameOver
+		// scene after the end of the game.
+		// So we can wrap the transition with a one second delay.
+    DispatchQueue.main.asyncAfter(deadline: .now() + 1) {
+        self.sceneDelegate?.transition(to: gameOver)
+    }
+}
+```
+
+Player가 이기면 You Win! Model을 보여주고 Player가 지면 You Lose Model을 보여준다.
+
+Model을 가장 잘 볼 수 있도록 Camera를 장면에 다시 배치한다.
+
+GameOver Scene에 추가할 Model은 Game Model > Game Over에 위치해 있다.
+
+GameOver.swift를 열고 Message Model에 대한 속성을 추가한다.
+
+**GameOver.swift**
+
+```swift
+import Foundation
+
+class GameOver: Scene {
+    var messageModel: Model?
+
+		I'm making it optional, as I don't know which model to load until win has been set.
+    var win = false {
+        didSet {
+						// In wins didset closure, replace the print command
+						// with loading the correct model.
+            if win {
+                messageModel = Model(name: "youwin")
+            } else {
+                messageModel = Model(name: "youlose")
+            }
+						// And then add it to the scene.
+            add(node: messageModel!)
+        }
+    }
+
+    override func click(location: SIMD2<Float>) {
+        let scene = RayBreak(sceneSize: sceneSize)
+        sceneDelegate?.transition(to: scene)
+    }
+
+		// In setupScene, set the camera back from the model
+		// and widen the field of view.
+    override func setupScene() {
+        camera.distance = 15
+        camera.fov = radians(fromDegrees: 100)
+    }
+
+		// To rotate the model, override updatescene and add a litte bit
+		// to the rotation of the model every frame.
+    override func updateScene(deltaTime: Float) {
+        messageModel?.rotation.y += .pi / 4 * deltaTime
+    }
+}
+```
+
+Raybreak에서 lives를 0으로 변경하고 Click하면 게임이 다시 시작되지만, Player가 준비가 되기 전에 시작된다는 문제가 있다. 시작할 준비가 될 때까지 게임이 시작되지 않도록 bool을 추가한다.
+
+```swift
+var startGame = false
+```
+
+게임이 시작되지 않은 경우 updateScene을 종료한다.
+
+```swift
+override func updateScene(deltaTime: Float) {
+		// nothing will be updated.
+		// Start the game whenever you press a key.
+    if !startGame {
+        return
+    }
+		..
+}
+```
+
+keyDown 시 게임을 시작한다.
+
+```swift
+override func keyDown(key: Int, isARepeat: Bool) -> Bool {
+		..
+    startGame = true
+    return true
+}
+```
+
+# Conclusion
+
+![Untitled 6](https://user-images.githubusercontent.com/26589915/232313470-71cae801-f4a6-49b0-881e-29e7f59f96c2.png)
+
+자신만의 게임 엔진을 코딩하는 핵심은 규칙을 만드는 것임을 기억해라.
+
+디자인 결정을 내리는 과정을 통해 얻은 Metal 지식으로 자신만의 게임과 3D 시각화를 만드는 방법을 잘 알고 있을 것이다.
+
+3D Model을 로드하고 GPU Pipeline으로 보내 2D로 Rendering하는 것으로 시작했다. 그런 다음 몇 가지 수학 함수를 사용하여 Model을 3D 공간에 배치했다.
+
+파편화에 뛰어들어 Model에 조명을 비추는 방법을 배운 다음 Material과 Texture로 원하는 대로 색상을 지정하는 방법을 배웠다. 버퍼의 내부를 검사하고 GPU에서 무슨 일이 일어나고 있는지 정확히 볼 수 있도록 GPU debuggur의 중요성에 대해 배웠다.
+
+마지막으로 우리는 게임 엔진을 사용하여 사운드와 음악, Game Over Scene으로 완성된 게임을 작성했다. 여전히 Metal과 Computer Graphics에 대해 배워야 할 것이 많다. Metal은 방대하고 복잡한 API이며 기본 사항만 다루었다.
+
+하지만 이제 실험을 할 수 있을 만큼 충분히 알아야 한다.
+
+Metal로 더 깊이 들어가 애니메이션이나 Tesselation을 발견하거나 역추적을 수행하기 위해 Compute Shader를 사용하려는 경우 Metal by Tutorials라는 책이 있다.
+
+Apple은 지난 몇 년 동안 Metal 및 모델 레이아웃의 복잡성에 대한 비디오를 제작하는 데 정말 잘 해왔다. 기본 사항을 모르면 이해하기 어려울 수 있다.
